# Replicant

./: .gitignore  .tarballignore  ASSUMPTIONS  AUTHORS  LICENSE  Makefile.am  README  TODO  TOOLS  configure.ac  memstream.h  namespace.h  replicant-benchmark.cc  replicant-debug.cc  replicant.cc  replicant.pc  replicant.pc.in  replicant.supp  replicant.upack.in  visibility.h
benchmarks/replicant-call/: main.go
bindings/go/: client.go
client/: c.cc  client.cc  client.h  command.cc  command.h  controller.cc  controller.h  mapper.cc  mapper.h  pending.cc  pending.h  pending_call.cc  pending_call.h  pending_call_robust.cc  pending_call_robust.h  pending_cond_follow.cc  pending_cond_follow.h  pending_cond_wait.cc  pending_cond_wait.h  pending_defended_call.cc  pending_defended_call.h  pending_generate_unique_number.cc  pending_generate_unique_number.h  pending_poke.cc  pending_poke.h  pending_robust.cc  pending_robust.h  pending_wait_new_config.cc  pending_wait_new_config.h  replicant.cc  replicant.h  server_selector.cc  server_selector.h  server_status.cc  server_status.h
common/: atomic_io.cc  atomic_io.h  bootstrap.cc  bootstrap.h  chain_node.cc  chain_node.h  configuration.cc  configuration.h  constants.h  generate_token.cc  generate_token.h  ids.cc  ids.h  macros.h  mapper.cc  mapper.h  network_msgtype.cc  network_msgtype.h  packing.cc  packing.h  quorum_calc.h  response_returncode.cc  response_returncode.h  server.cc  server.h  special_clients.h  special_objects.h
daemon/: acceptor.cc  acceptor.h  ballot.cc  ballot.h  client_manager.cc  client_manager.h  command.cc  command.h  command_manager.cc  command_manager.h  commander.cc  commander.h  condition.cc  condition.h  conditions_wrapper.h  configuration_manager.cc  configuration_manager.h  connection.cc  connection.h  controller.cc  controller.h  daemon.cc  daemon.h  deferred_msg.h  fact_store.cc  fact_store.h  failure_detector.cc  failure_detector.h  failure_manager.cc  failure_manager.h  failure_tracker.cc  failure_tracker.h  heal_next.cc  heal_next.h  leader.cc  leader.h  main.cc  mapper.cc  mapper.h  object.cc  (+28 more)
doc/: .gitignore  Makefile  replicant.tex
examples/: alarm.c  condition.c  counter.c  echo.c  log.c  nop.c  suspect.c  tick.c
examples/lock/: break-lock.c  common.h  object.c  with-lock.c
include/: replicant.h  rsm.h
m4/: anal_warnings.m4
maint/: valgrind-gremlins
test/: 5-node-cluster.gremlin  5-node-cluster.valgrind.gremlin  chaos.gremlin  chaos.valgrind.gremlin  env.sh  example-condition.gremlin  example-condition.valgrind.gremlin  example-counter.gremlin  example-counter.valgrind.gremlin  example-echo.gremlin  example-echo.valgrind.gremlin  example-log.gremlin  example-log.valgrind.gremlin  example-nop.gremlin  example-nop.valgrind.gremlin  example-tick.gremlin  example-tick.valgrind.gremlin  leader-rotate.gremlin  leader-rotate.valgrind.gremlin  lock-break.gremlin  lock-break.valgrind.gremlin  lock-normal.gremlin  lock-normal.valgrind.gremlin  restart-diff-address.gremlin  restart-diff-address.valgrind.gremlin  runner.py
test/sh/: example-state-machines
tools/: availability-check.cc  backup-object.cc  block.cc  cli.cc  common.h  conn-str.cc  create-object.cc  debug-call.cc  debug-condition.cc  debug-defended-call.cc  debug-dump.cc  del-object.cc  generate-unique-number.cc  integrity-check.cc  kill-object.cc  kill-server.cc  list-objects.cc  list-servers.cc  new-object.cc  poke.cc  repair.cc  replicant-serial-killer.py  restore-object.cc  server-status.cc  verify-logged-commands
